# prelegal

./: .dist.env  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.frontend  README.md  catalog.json  docker-compose.yml  requirements.txt  vercel.json
api/: index.py
backend/: .vercelignore  Dockerfile  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
backend/src/prelegal_api/: __init__.py  auth.py  database.py  document_chat.py  document_detect.py  document_history.py  document_registry.json  document_registry.py  llm_client.py  main.py  nda_chat.py  security.py  settings.py
backend/tests/: conftest.py  test_app.py  test_auth_api.py  test_document_chat.py  test_document_detect.py  test_document_history_api.py  test_document_registry.py  test_nda_chat.py  test_security.py
frontend/: .env.production  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-header.tsx  auth-form.tsx  auth-gate.tsx  chat-bubbles.tsx  document-chat.tsx  document-finder.tsx  document-gallery.tsx  document-history.tsx  document-preview.tsx  document-view.tsx  login-form.tsx  nda-chat.tsx  nda-document-preview.tsx  nda-form.tsx  nda-preview.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/e2e/: dashboard.spec.ts  document-chat.spec.ts  document-history.spec.ts  landing.spec.ts  (+2 more)
scripts/: start-unix.sh  start-windows.ps1
templates/: BAA.md  CSA.md  DPA.md  Design-Partner-Agreement.md  LICENSE.txt  Mutual-NDA.md
(+44 files in other folders)
