[project]
name = "prelegal-api"
version = "0.1.0"
description = "FastAPI backend foundation for Prelegal"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic-settings>=2.12.0",
    "libsql-experimental>=0.0.55",
    "litellm>=1.92.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
